[package]
authors = ["Jonathan Creekmore <jonathan@thecreekmores.org>"]
description = "Parse and encode PEM-encoded data."
documentation = "https://docs.rs/pem/"
homepage = "https://github.com/jcreekmore/pem-rs.git"
license = "MIT"
name = "pem"
readme = "README.md"
repository = "https://github.com/jcreekmore/pem-rs.git"
version = "0.8.2-alpha.0"
categories = [ "cryptography" ]
edition = "2018"

[features]
default = ["std", "mesalock_sgx"]
std = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[dependencies]
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx.git" }
once_cell = { git = "https://github.com/mesalock-linux/once_cell-sgx.git" }
regex = { git = "https://github.com/mesalock-linux/regex-sgx.git" }

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "pem_benchmark"
harness = false

[badges]
travis-ci = { repository = "jcreekmore/pem-rs" }
